# hook

./: CMakeLists.txt  README.md  build.sh  pack.sh
code_style/: check_style.py  cpplint.py
qualcomm_demo/: cpuinfo.sh  demo.sh  online_demo.cc  online_demo.h
qualcomm_demo/dsp_config/: 4mic_ring_60mm_weight.txt  6mic_ring_80mm_gsc_B.txt  6mic_ring_80mm_gsc_w_fix.txt  6mic_ring_80mm_weights.txt  uplink.cfg  uplink4.cfg
qualcomm_demo/dsp_post_config/: uplink.cfg  uplink4.cfg
serial_demo/: build.sh  serial.c  serial_demo  serial_demo.txt
utils/: AudioPlayer.cpp  AudioPlayer.h  AudioRecord.cpp  AudioRecord.h  LogUtils.h  MobPipeline.cpp  MobPipeline.h  NativeAudioBase.cpp  NativeAudioBase.h  mobvoi_serial.c  mobvoi_serial.h  test_dsp_pipeline.cpp  test_player.cpp  wav_header.h
